--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ minecraft_version=1.16.3
 
 # Fabric
 yarn_mappings=1.16.3+build.47
-loader_version=0.10.1+build.209
-fabric_version=0.24.0+build.411-1.16
+loader_version=0.10.3+build.211
+fabric_version=0.24.1+build.412-1.16
 
 # Mod Properties
-mod_version=3.0.0-alpha.3
+mod_version=3.0.0-beta.1
 maven_group = software.bernie.geckolib
 archives_base_name = fabric-1.16.3-geckolib
