--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
+    }
+}
+
 plugins {
     id 'fabric-loom' version '0.5-SNAPSHOT'
     id 'maven-publish'
@@ -13,8 +22,7 @@ version = snapshotVersion == null ? project.mod_version : "SNAPSHOT-" + snapshot
 group = project.maven_group
 
 
-minecraft{
-    accessWidener "src/main/resources/geckolib.accesswidener"
+minecraft {
 }
 
 repositories {
@@ -22,19 +30,36 @@ repositories {
     maven { url 'https://repo.repsy.io/mvn/fadookie/particleman' }
 }
 
+configurations {
+    shade
+}
+
+tasks.remapJar.dependsOn(shadowJar)
+
 dependencies {
-    //to change the versions see the gradle.properties file
+    // Minecraft/Fabric deps
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'com.eliotlash.molang:molang:SNAPSHOT.8'
-    modImplementation 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
-    compile project(':geckolib-core')
+
+
+    // Actual dependencies
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
+    compile 'com.eliotlash.molang:molang:SNAPSHOT.8'
+    compile 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
+    compile project(':geckolib-core')
 
+    // Shaded dependencies
+    shade group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    shade group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
+    shade 'com.eliotlash.molang:molang:SNAPSHOT.8'
+    shade 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
+    shade project(':geckolib-core')
+
+    // Testing
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
@@ -46,33 +71,25 @@ dependencies {
 }
 
 shadowJar {
-    minimize()
-
-    dependencies {
-        include('com.eliotlash.molang:molang:.*')
-        include('com.eliotlash.mclib:mclib:.*')
-        include('com.fasterxml.jackson.core:.*')
-        include('com.fasterxml.jackson.datatype:.*')
-        include(project(':geckolib-core'))
-    }
+    configurations = [project.configurations.shade]
 
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     exclude('software/bernie/example/**')
     exclude('assets/**')
-    exclude('META-INF/**')
+     exclude('META-INF/**')
     classifier 'shadowed'
 }
 
 jar {
     manifest {
         attributes([
-                "Specification-Title": "GeckoLib",
-                "Specification-Vendor": "Gecko",
-                "Specification-Version": "1", // We are version 1 of ourselves
-                "Implementation-Title": project.name,
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor" :"Gecko",
+                "Specification-Title"     : "GeckoLib",
+                "Specification-Vendor"    : "Gecko",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Gecko",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
@@ -110,28 +127,20 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
 }
 artifacts {
-    shadowJar
+    archives shadowJar
 }
 
 jar {
     from "LICENSE"
 }
 
+
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(jar) {
-                builtBy jar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-            artifact(shadowJar) {
-                builtBy shadowJar
-            }
+            artifact shadowJar
+            artifact sourcesJar
             artifactId = project.archives_base_name
         }
     }
