--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ archivesBaseName = 'forge-1.15.2-geckolib'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 
-
 minecraft {
     mappings channel: 'snapshot', version: '20200225-1.15.1'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -113,7 +112,6 @@ shadowJar {
 }
 
 
-
 reobf {
     shadowJar {} // Reobfuscate the shadowed JAR
 }
@@ -123,13 +121,14 @@ jar.finalizedBy('reobfJar')
 jar {
     manifest {
         attributes([
-            "Specification-Title": "GeckoLib",
-            "Specification-Vendor": "Gecko",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"Gecko",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "FMLModType"              : "LIBRARY",
+                "Specification-Title"     : "GeckoLib",
+                "Specification-Vendor"    : "Gecko",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Gecko",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 
@@ -142,7 +141,7 @@ task packageSources(type: Jar, dependsOn: 'classes') {
     from sourceSets.main.allSource
     classifier = 'sources'
 }
-artifacts{
+artifacts {
     archives shadowJar
 }
 
