--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,10 +6,13 @@
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[34,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/bernie-g/geckolib/issues" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
+license="LGPL 3.0"
+
+
 [[mods]] #mandatory
 # The modid of the mod
 modId="geckolib" #mandatory
@@ -37,7 +40,7 @@ GeckoLib is an animation engine for modders. It supports forward-kinematic anima
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[31,)" #mandatory
+    versionRange="[34,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -46,6 +49,6 @@ GeckoLib is an animation engine for modders. It supports forward-kinematic anima
 [[dependencies.geckolib]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15, 1.16)"
+    versionRange="[1.16, 1.17)"
     ordering="NONE"
     side="BOTH"
