--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ fabric_version=0.24.1+build.412-1.16
 mod_version=3.0.0-beta.1
 maven_group = software.bernie.geckolib
 archives_base_name = fabric-1.16.3-geckolib
+repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
