--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'java'
 def snapshotVersion = System.getenv("GITHUB_RUN_NUMBER")
 version = snapshotVersion == null ? project.mod_version : "SNAPSHOT-" + snapshotVersion
 
-group = 'software.bernie.geckolib3'
+group = 'software.bernie.geckolib'
 archivesBaseName = 'forge-1.16.3-geckolib'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
@@ -109,14 +109,14 @@ shadowJar {
 
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
-    exclude('software/bernie/example/**')
-    exclude('assets/**')
+    exclude('software/bernie/geckolib/**')
     classifier ''
 }
 
 
 reobf {
     shadowJar {} // Reobfuscate the shadowed JAR
+    noToml {}
 }
 tasks.build.dependsOn reobfShadowJar
 publish.dependsOn('reobfJar')
@@ -124,6 +124,41 @@ shadowJar.dependsOn('classes')
 jar.finalizedBy('reobfJar')
 
 jar {
+    manifest {
+        attributes([
+                "Specification-Title"     : "GeckoLib",
+                "Specification-Vendor"    : "Gecko",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Gecko",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+
+    exclude('software/bernie/example/**')
+    exclude('software/bernie/geckolib/**')
+}
+
+task packageSources(type: ShadowJar, dependsOn: 'classes') {
+    configurations = [project.configurations.shade]
+    from sourceSets.main.allSource
+    exclude('META-INF/**')
+    relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
+    relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
+    exclude('software/bernie/geckolib/**')
+    classifier = 'sources'
+}
+
+task noToml(type: ShadowJar) {
+    configurations = [project.configurations.shade]
+    from sourceSets.main.allJava
+    exclude('META-INF/**')
+    exclude('software/bernie/example/**')
+    exclude('assets/**')
+    exclude('software/bernie/geckolib/**')
+    relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
+    relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     manifest {
         attributes([
                 "FMLModType"              : "LIBRARY",
@@ -136,31 +171,10 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
-
-    exclude('software/bernie/example/**')
-    exclude('assets/**')
-}
-
-task packageSources(type: ShadowJar, dependsOn: 'classes') {
-    configurations = [project.configurations.shade]
-    from sourceSets.main.allSource
-    exclude('META-INF/**')
-    relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
-    relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
-    classifier = 'sources'
-}
-
-task noToml(type: ShadowJar, dependsOn: 'classes') {
-    configurations = [project.configurations.shade]
-    from sourceSets.main.allSource
-    exclude('META-INF/**')
-    exclude('software/bernie/example/**')
-    exclude('assets/**')
-    relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
-    relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     classifier = 'no_toml'
 }
 
+noToml.dependsOn(jar)
 
 artifacts {
     archives shadowJar
