Fixed UV issue and bumped version, also started including sources

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,8 @@ dependencies {
 
 shadowJar {
     configurations = [project.configurations.shade]
-
+    from sourceSets.main.allSource
+    duplicatesStrategy = 'exclude'
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
     exclude('software/bernie/geckolib/**')
