--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 # Minecraft
-minecraft_version=1.16.3
+minecraft_version=1.16.4
 
 # Fabric
-yarn_mappings=1.16.3+build.47
-loader_version=0.10.3+build.211
-fabric_version=0.24.1+build.412-1.16
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
+fabric_version=0.26.3+1.16
 
 # Mod Properties
-mod_version=3.0.0-beta.7
+mod_version=3.0.0-beta.8
 maven_group = software.bernie.geckolib
-archives_base_name = fabric-1.16.3-geckolib
+archives_base_name = fabric-1.16.4-geckolib
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
