--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 org.gradle.jvmargs=-Xmx3G
 # Minecraft
 minecraft_version=1.16.4
+geckolib_core_version=1.0.4
 
 # Fabric
 yarn_mappings=1.16.4+build.7
