--- a/build.gradle
+++ b/build.gradle
@@ -37,18 +37,20 @@ repositories {
     maven { url 'https://repo.repsy.io/mvn/fadookie/particleman' }
     maven { url 'https://maven.enginehub.org/repo/' }
     maven { url 'https://repo.repsy.io/mvn/gandiber/geckolib' }
+    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile 'com.eliotlash.molang:molang:SNAPSHOT.8'
-    compile 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
+    compile 'com.eliotlash.molang:molang:SNAPSHOT.12'
+    compile 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
     compile project(':geckolib-core')
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
+    compile 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
 
-
-    shade 'com.eliotlash.molang:molang:SNAPSHOT.8'
-    shade 'com.eliotlash.mclib:mclib:SNAPSHOT.8'
+    shade 'com.eliotlash.molang:molang:SNAPSHOT.12'
+    shade 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
     shade project(':geckolib-core')
     shade group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     shade group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.0'
@@ -66,17 +68,14 @@ dependencies {
 shadowJar {
     configurations = [project.configurations.shade]
     from sourceSets.main.allSource
-
     relocate 'com.eliotlash', 'software.bernie.shadowed.eliotlash'
     relocate 'com.fasterxml', 'software.bernie.shadowed.fasterxml'
-    exclude('software/bernie/example/**')
-    exclude('assets/**')
     classifier ''
 }
 
 
 reobf {
-    shadowJar {} // Reobfuscate the shadowed JAR
+    shadowJar {}
 }
 tasks.build.dependsOn reobfShadowJar
 publish.dependsOn('reobfJar')
@@ -96,9 +95,6 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
-
-    exclude('software/bernie/example/**')
-    exclude('assets/**')
 }
 
 task packageSources(type: ShadowJar, dependsOn: 'classes') {
