--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.10.8
 fabric_version=0.28.0+1.16
 
 # Mod Properties
-mod_version=3.0.0-beta.9
+mod_version=3.0.0
 maven_group = software.bernie.geckolib
 archives_base_name = fabric-1.16.4-geckolib
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
