--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,2 +1,5 @@
 #Publishing
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
+version=1.0.4
+group=software.bernie.geckolib
+archivesBaseName=geckolib-core
