--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile 'com.eliotlash.molang:molang:SNAPSHOT.12'
     compile 'com.eliotlash.mclib:mclib:SNAPSHOT.12'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 }
 
 jar {
